[build-system]
requires = ["setuptools>=61.0","boto3>=boto3-1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "0.0.1"
description = "Package used as example."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]